# django-asgi

./: README.md  pyproject.toml
app/: views.py
app/migrations/: 0001_initial.py
django_asgi/: asgi.py  settings.py  urls.py  wsgi.py
