[tool.poetry]
name = "django-asgi"
version = "0.1.0"
description = ""
authors = ["James Thorniley <james.thorniley@mixcloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
mysqlclient = "^2.2.0"
uvicorn = {extras=["standard"], version="^0.24.0.post1"}
# asgiref = {git = "https://github.com/django/asgiref.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
